[tool.poetry]
name = "hashes-and-encodings"
version = "0.1.0"
description = ""
authors = ["Rusih100 <rusih100@gmail.com>"]
readme = "README.md"
packages = [{include = "hashes_and_encodings"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"

[tool.black]
line-length = 80
exclude = '''
/(
  | \.git
  | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
line_length = 80


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
